<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/logo_de_la_unigustiniana"
        android:src="@drawable/ic_main" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:text="@string/bienvenido"
        android:textColor="@color/dark_blue"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="36dp"
        android:visibility="visible"
        tools:context=".MapsActivity" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_backup"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/logo_de_la_unigustiniana"
        android:src="@drawable/ic_map_backup"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingTop="15dp"
        android:paddingRight="25dp"
        android:paddingBottom="15dp"
        android:text="@string/siguiente"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="italic"
        app:cornerRadius="10dp" />

</androidx.appcompat.widget.LinearLayoutCompat>