<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:nestedScrollingEnabled="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"
        tools:context=".FormActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_icon"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="36dp"
            android:contentDescription="@string/logo_de_la_unigustiniana"
            android:src="@drawable/ic_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_form"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="-5dp"
            android:layout_marginEnd="36dp"
            android:contentDescription="@string/logo_de_la_unigustiniana"
            android:src="@drawable/ic_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_icon" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/ingresar"
            android:textColor="@color/dark_blue"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_form" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/student_code"
            app:boxBackgroundColor="@color/Grey"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/dark_blue"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/custom_student_code_icon"
                android:drawablePadding="6dp"
                android:inputType="number"
                android:maxLength="12" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/stundet_mail"
            app:boxBackgroundColor="@color/Grey"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/dark_blue"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/custom_student_email_icon"
                android:drawablePadding="6dp"
                android:inputType="textEmailAddress"
                android:maxLength="70" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingTop="15dp"
            android:paddingRight="25dp"
            android:paddingBottom="15dp"
            android:text="@string/consultar_nota"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="italic"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>